syntax = "proto3";
package schema_service;

message Database {
    uint64 id = 1;
    string name = 2;
    map<string, Table> tables = 3;
}

message Table {
    uint64 id = 1;
    string name = 2;
    map<string, Column> columns = 3;
}

message Column {
    uint64 id = 1;
    string name = 2;
    uint32 column_type = 3;
}

message GetDatabaseRequest {
    string database = 1;
}

message GetDatabaseResponse {
    Database database = 1;
}

service SchemaService {
    rpc GetDatabase(GetDatabaseRequest) returns (GetDatabaseResponse);
}
